welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:5: error: not found: value reutrn
  else if (a>b) {reutrn a}
                 ^