welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
  if ( in12(a) && (in12(b) == false) ) {return a}
  else if ( in12(b) && (in12(a) == false) ) {return b}
  else if ( (in12(a) == false) && (in12(b) == false) ) {return a}
  else if (a>b) {reutrn a}
  else {return b}
}
  
  
  
  
  
  
def in12(a:Int):Boolean = {
	if ((a>=10)&&(a<=20)) {return true} else {return false}
}